docs/0.19/_sources/modeling/gallery/spectral/plot_gauss_spectral.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "modeling/gallery/spectral/plot_gauss_spectral.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_modeling_gallery_spectral_plot_gauss_spectral.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_modeling_gallery_spectral_plot_gauss_spectral.py:


.. _gaussian-spectral-model:

Gaussian spectral model
=======================

This model parametrises a gaussian spectrum.

It is defined by the following equation:

.. math::
    \phi(E) = \frac{N_0}{\sigma \sqrt{2\pi}}  \exp{ \frac{- \left( E-\bar{E} \right)^2 }{2 \sigma^2} }

.. GENERATED FROM PYTHON SOURCE LINES 17-20

Example plot
------------
Here is an example plot of the model:

.. GENERATED FROM PYTHON SOURCE LINES 20-31

.. code-block:: default


    from astropy import units as u
    import matplotlib.pyplot as plt
    from gammapy.modeling.models import GaussianSpectralModel, Models, SkyModel

    energy_bounds = [0.1, 100] * u.TeV
    model = GaussianSpectralModel(norm="1e-2 cm-2 s-1", mean=2 * u.TeV, sigma=0.2 * u.TeV)
    model.plot(energy_bounds)
    plt.grid(which="both")
    plt.ylim(1e-24, 1e-1)




.. image-sg:: /modeling/gallery/spectral/images/sphx_glr_plot_gauss_spectral_001.png
   :alt: plot gauss spectral
   :srcset: /modeling/gallery/spectral/images/sphx_glr_plot_gauss_spectral_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 32-35

YAML representation
-------------------
Here is an example YAML file using the model:

.. GENERATED FROM PYTHON SOURCE LINES 35-40

.. code-block:: default


    model = SkyModel(spectral_model=model, name="gaussian-model")
    models = Models([model])

    print(models.to_yaml())




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    components:
    -   name: gaussian-model
        type: SkyModel
        spectral:
            type: GaussianSpectralModel
            parameters:
            -   name: norm
                value: 0.01
                unit: cm-2 s-1
            -   name: mean
                value: 2.0
                unit: TeV
            -   name: sigma
                value: 0.2
                unit: TeV






.. _sphx_glr_download_modeling_gallery_spectral_plot_gauss_spectral.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_gauss_spectral.py <plot_gauss_spectral.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_gauss_spectral.ipynb <plot_gauss_spectral.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
